--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EXPO_PUBLIC_APPWRITE_PROJECT_ID=69908c120019de4aa5e5
 EXPO_PUBLIC_APPWRITE_PROJECT_NAME="Eato"
 EXPO_PUBLIC_APPWRITE_ENDPOINT=https://fra.cloud.appwrite.io/v1
+EXPO_PUBLIC_APPWRITE_DATABASE_ID=69930a74000df2aa161f
